[gd_scene load_steps=7 format=3 uid="uid://c4sdhdmmxwye6"]

[ext_resource type="Script" path="res://scripts/cards/card.gd" id="1_umjp1"]
[ext_resource type="Texture2D" uid="uid://dv1stdckgs7l5" path="res://assets/images/cards/core card/card_border.png" id="2_fh1hc"]
[ext_resource type="Texture2D" uid="uid://b7a04cmjjvgua" path="res://assets/images/cards/core card/card.png" id="3_7kxam"]
[ext_resource type="Texture2D" uid="uid://gm5phtwk456g" path="res://assets/images/cards/core card/card_cost.png" id="4_yfsjg"]
[ext_resource type="Theme" uid="uid://c8r8cjb1at4wg" path="res://assets/resources/main_theme.tres" id="5_0pxmf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4wvrc"]
radius = 9.30719
height = 27.3987

[node name="Card" type="Node2D"]
scale = Vector2(0.375, 0.375)
script = ExtResource("1_umjp1")
type = "TODO: card type"

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2.66667, 18.6667)
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.533333, -4.8)
scale = Vector2(5.1, 5.1)
shape = SubResource("CapsuleShape2D_4wvrc")

[node name="CardBorderSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.803922, 0.360784, 0.360784, 1)
texture = ExtResource("2_fh1hc")

[node name="ImageSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-12, -102.667)
scale = Vector2(0.993631, 1.02342)

[node name="CardSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_7kxam")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -246.0
offset_top = -283.0
offset_right = 242.0
offset_bottom = -202.0
theme = ExtResource("5_0pxmf")
text = "TODO: Card Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostDisplay" type="Node2D" parent="."]
position = Vector2(-221.667, -284.667)

[node name="CostSprite" type="Sprite2D" parent="CostDisplay"]
scale = Vector2(0.702729, 0.816543)
texture = ExtResource("4_yfsjg")

[node name="CostLabel" type="Label" parent="CostDisplay"]
unique_name_in_owner = true
offset_left = -39.0
offset_top = -39.0
offset_right = 40.0
offset_bottom = 41.0
theme = ExtResource("5_0pxmf")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -155.0
offset_top = -8.0
offset_right = 154.0
offset_bottom = 29.0
theme = ExtResource("5_0pxmf")
theme_override_font_sizes/font_size = 40
text = "TODO: card type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="descriptionLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -160.0
offset_top = 26.0
offset_right = 158.0
offset_bottom = 254.0
theme = ExtResource("5_0pxmf")
text = "TODO: Card Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
